--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,10 +1,5 @@
-live_config_reload = true
 
-import = [
-  "~/.config/alacritty/catppuccin-frappe.toml"
-]
-
-[shell]
+[terminal.shell]
 program = "/bin/zsh"
 args = ["-l"]
 #working_directory = "~/Working"
@@ -19,7 +14,7 @@ size = 14
 
 [font.normal]
 family = "FiraCode Nerd Font"
-style = "Retina"
+style = "Regular"
 
 [env]
 TERM = "xterm-256color"
@@ -28,3 +23,12 @@ TERM = "xterm-256color"
 render_timer = false
 renderer = "glsl3"
 prefer_egl = false
+
+[general]
+live_config_reload = true
+
+import = [
+  "~/.config/alacritty/catppuccin-frappe.toml"
+]
+
+[terminal]
